--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/uuid": "^8.3.4",
+    "date-fns": "^2.28.0",
     "mobx": "^6.3.12",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
